# qc_dev_containers

./: main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
