[tool.poetry]
name = "test-dev-container"
version = "0.1.0"
description = ""
authors = ["Jeff Deville <jeffdeville@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
quantconnect = "^0.1.0"
quantconnect-stubs = "^14636"
lean = "^1.0.110"
ptvsd = "^4.3.2"
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
